--- a/candidate-database/src/styles/style.css
+++ b/candidate-database/src/styles/style.css
@@ -27,7 +27,7 @@
 }
 
 body {
-  background-color: black;
+  background-color: rgb(80, 80, 80);
   color: white;
   padding: 40px;
   text-align: left;
